Fix crashes of concurrent access Fix hide/unhide bug Fix update outlet bug Replace hash comparison with simple hasChanged boolean.